2009-05-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	testsuite: do not fail in cleanup code.
	* tests/defs.in: Turn off errexit in the cleanup trap, to avoid
	a test failure due to a nonzero command.
	* THANKS: Update.
	Report by Dagobert Michelsen.

2009-05-23  Peter O'Gorman  <peter@pogma.com>

	python: do not install in system directories on Darwin 9.
	On Darwin 9, get_python_lib returns a path below `/Library/Python'
	regardless of the `prefix' argument it was passed, causing `make
	install' to target the system directories regardless of `--prefix'
	argument used.  Work around this Darwin bug by ignoring the result
	of get_python_lib if it points outside of the passed prefix, and
	the prefix was not a system directory.
	* m4/python.m4 (AM_PATH_PYTHON): If the prefix does not match the
	initial portion of the pythondir returned by get_python_lib, then
	ignore it unless the configured prefix is `/usr' or starts with
	`/System'.  Fixes instmany-python.test failure on Mac OS X 10.5.7.
	* NEWS: Update.

2009-05-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Clarify how to enable `silent-rules' and other global options.
	* doc/automake.texi (Options): When introducing options, be more
	careful to note that not all of them can be specified in
	AUTOMAKE_OPTIONS statements, and that some do not make sense in
	subdirectories.  Note more prominently that `silent-rules' can
	only be specified in configure.ac.
	* lib/Automake/Options.pm (_process_option_list): Improve error
	message for `silent-rules', `tar-v7', `tar-ustar', `tar-pax'
	options specified in Makefile.am files.
	Report by Bruno Haible.

2009-05-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Skip specflg10.test without a C++ compiler.
	* tests/specflg10.test: Require g++.
	Report by Thien-Thi Nguyen.

2009-05-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Revert last patch, IRIX has an editor named `jot'.
	* tests/instmany-mans.test: Do not try `jot'.
	* tests/instmany-python.test: Likewise.