@@ -247,8 +247,10 @@ Exit ()
 
 curdir=`pwd`
 testSubDir=$me.dir
-chmod -R u+rwx $testSubDir > /dev/null 2>&1
-rm -rf $testSubDir > /dev/null 2>&1
+test ! -d $testSubDir || {
+  find $testSubDir -type d ! -perm -200 -exec chmod u+w {} ";"
+  rm -rf $testSubDir
+}
 mkdir $testSubDir
 
 sh_errexit_works=@sh_errexit_works@
@@ -258,8 +260,9 @@ if test "$sh_errexit_works" = yes; then
     cd "$curdir"
     case $exit_status,$keep_testdirs in
     0,)
-      chmod -R a+rwx $testSubDir > /dev/null 2>&1
-      rm -rf "$testSubDir" ;;
+      find $testSubDir -type d ! -perm -200 -exec chmod u+w {} ";"
+      rm -rf $testSubDir
+      ;;
     esac
     test "$signal" != 0 &&
       echo "$as_me: caught signal $signal"
