@@ -10,6 +10,9 @@ Bugs fixed in 1.11.0a:
     `get_python_lib' function if it points outside the configured prefix,
     unless the `--prefix' argument was either `/usr' or below `/System'.
 
+  - The testsuite does not try to change the mode of `ltmain.sh' files from
+    a Libtool installation (symlinked to test directories) any more.
+
 
 New in 1.11:
 
