@@ -1,5 +1,14 @@
 2009-05-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	testsuite: do not change the mode of installed Libtool files.
+	* tests/defs.in: Do not use `chmod -R' on the test directory, as
+	that may change or try to change the mode of installed files:
+	the test directory may contain symlinks to ltmain.sh files from
+	a Libtool installation, and Solaris `chmod -R' touches symlink
+	targets.  Instead, use the cleanup strategy used in distdir.am.
+	* NEWS: Update.
+	Report by Dagobert Michelsen.
+
 	testsuite: do not fail in cleanup code.
 	* tests/defs.in: Turn off errexit in the cleanup trap, to avoid
 	a test failure due to a nonzero command.
